# mborne.github.io

./: .gitignore  .markdownlint.yml  404.html  AGENT.md  LICENSE  README.md  index.html  markdown-link-check.config.json  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: ci.yml
ansible/: README.md  create-venv.sh  install.sh
architecture/: index.html
architecture/api/: index.html
asciinema/: README.md  index.md
assets/css/: style.css
assets/javascripts/: bundle.f55a23d4.min.js
assets/js/: main.js
bash/: README.md
clamav/: README.md
conda/: README.md  install-miniconda.sh
cookies/: index.html
cuda-toolkit/: README.md  install-wsl.sh
cxx/: README.md
cxx/examples/cgal-helloworld/: CMakeLists.txt  README.md
cxx/examples/leveldb-kvs/: .gitignore  CMakeLists.txt  README.md
dagster/: README.md
depots/: index.html
devops/: index.html
devops/12-facteurs/: index.html
devops/devsecops/: index.html
devops/iac/: index.html
devops/lb-rp/: index.html
devops/letsencrypt-acme/: index.html
devops/principes/: index.html
devops/proxy-sortant/: index.html
devops/reseau/: index.html
devops/securite/: index.html
devops/semver/: index.html
devops/stockage-artefact/: index.html
diagrams/: README.md  index.md
docker/: README.md
docs/: .gitgnore  index.md
docs/architecture/: index.md
docs/cookies/: index.md
docs/depots/: index.md
docs/devops/: index.md
docs/documentation/: index.md
docs/fiches/: index.md
docs/geodata/: index.md
docs/historique/: index.md
docs/ia/: index.md
docs/mentions-legales/: index.md
docs/outils/: LICENSE  README.md  index.md
docs/outils/cxx/examples/boost-examples/: CMakeLists.txt
docs/outils/cxx/examples/boost-python-helloworld/: .gitignore  CMakeLists.txt  README.md
docs/outils/cxx/examples/osg-experiments/: CMakeLists.txt  Makefile
docs/outils/cxx/examples/osg-experiments/app/: osg-dem.cpp  osg-example.cpp  osg-helloworld.cpp  osg-nbody.cpp
docs/outils/cxx/examples/osg-experiments/include/osgx/: Matrix.h
docs/veille/: index.md
documentation/: index.html
fiches/: index.html
fiches/12-facteurs/: index.html
fiches/api/: index.html
fiches/devops/: index.html
fiches/dns/: index.html
fiches/lb-rp/: index.html
fiches/letsencrypt-acme/: index.html
fiches/llm/: index.html
fiches/mcp/: index.html
fiches/proxy-sortant/: index.html
fiches/reseau/: index.html
gcloud/: install.sh
geodata/: index.html
git/: README.md
gitea/: README.md  install-act_runner.sh
glusterfs/: README.md
go/: README.md  install.sh
hashicorp/: README.md  add-repository.sh
helm/: README.md  install.sh
historique/: index.html
ia/: index.html
ia/llm/: index.html
ia/mcp/: index.html
java/: README.md
js/: README.md
js/docs/: import-ts-js.md
js/unpkg.com/: markmap-lib@0.18.js  markmap-view@0.18.js
k3s/: README.md
kind/: install.sh
kubectl/: README.md
kubescape/: README.md
kvm/: README.md
mentions-legales/: index.html
minikube/: README.md
miniupnpc/: README.md
mkcert/: README.md  install.sh
nodejs/: install.sh
osm2pgsql/: .gitignore  README.md  get-styles.sh  import.sh  install.sh  update.sh
outils/: index.html
outils/ansible/: create-venv.sh  index.html  install.sh
outils/asciinema/: demo.cast  index.html  install.sh
outils/bash/: index.html
outils/certbot/: index.html  install.sh
outils/clamav/: index.html  install.sh
outils/cloud-init/: index.html
outils/conda/: index.html  install-miniconda.sh  install-miniforge.sh
outils/cuda-toolkit/: index.html  install-container-toolkit.sh
outils/cxx/: index.html  visual-studio.ps1
outils/cxx/examples/gmpxx-bench-sum/: CMakeLists.txt  main.cpp
outils/cxx/examples/leveldb-kvs/example/: CMakeLists.txt  lkvs-bench.cpp  lkvs-helloworld.cpp
outils/dagster/: index.html
outils/dbeaver/: index.html  (+1 more)
php/: README.md  bonnes-pratiques.md  install-composer.sh  install.sh  php-cs-fixer.md
pico/: README.md  install.sh
piper/: README.md  create-venv.sh  say.sh
postgresql/: install-client.sh  table-sizes.sh
prefect/: README.md
python/: README.md  virtualenv.md
qgis/: README.md
rclone/: install.sh
restic/: install.sh  latest.sh
rust/: README.md
search/: search_index.json
system/: load-env.sh  upgrade.sh
terraform/: README.md  index.md
torch/: README.md
trivy/: README.md  install.sh  latest.sh
ufw/: README.md
vagrant/: README.md  install.sh
veille/: index.html
wireguard/: README.md  index.md
wsl/: README.md  install-cuda-toolkit.sh  prepare-kvm.sh
wsl2/: README.md
(+372 files in other folders)
