[project]
name = "mborne-github-io"
version = "0.1.0"
description = "Personal GitHub project of mborne"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-exclude>=1.0.2",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-markmap>=2.5.2",
    "mkdocs-material>=9.6.12",
]
